--- a/app/src/main/res/layout/activity_questionarre.xml
+++ b/app/src/main/res/layout/activity_questionarre.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#00796b"
+        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:layout_weight="1"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
@@ -16,12 +17,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="0dp"
-    android:layout_weight="12"
+    android:layout_weight="10"
+    android:background="@color/colorPrimary"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <LinearLayout
         android:id="@+id/quiz_layout"
-        android:background="#E8EAF6"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -33,7 +35,9 @@
         <TextView
             android:id="@+id/question1"
             android:paddingBottom="16dp"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/question1"
@@ -41,13 +45,16 @@
             android:textSize="18sp" />
             <ImageButton
                 android:id="@+id/help"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="24dp"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:layout_height="match_parent"
                 android:background="@null"
                 android:onClick="help"
-                android:layout_marginLeft="8dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="0dp"
                 android:src="@drawable/ic_help_black_24dp"
-                android:layout_toRightOf="@id/question1" />
+                 />
         </RelativeLayout>
         <EditText
             android:id="@+id/question1_answer"
@@ -315,6 +322,7 @@
             android:paddingBottom="16dp"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/question8"
