--- a/app/src/main/res/layout/content_choice.xml
+++ b/app/src/main/res/layout/content_choice.xml
@@ -13,22 +13,21 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
-        android:textSize="48sp"
+        android:textSize="96sp"
         android:textColor="@color/colorAccent"
         android:layout_weight="1"
+        android:background="@drawable/ic_attach_money_black_48dp"
         android:onClick="questionarre"
         android:text="Portfolio"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="@android:color/darker_gray"/>
     <TextView
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="0dp"
-        android:textSize="48sp"
+        android:textSize="96sp"
         android:textColor="@color/colorAccent"
         android:layout_weight="1"
         android:text="Offers"/>
