Offers portion started.

--- a/app/src/main/res/layout/content_choice.xml
+++ b/app/src/main/res/layout/content_choice.xml
@@ -30,5 +30,6 @@
         android:textSize="96sp"
         android:textColor="@color/colorAccent"
         android:layout_weight="1"
-        android:text="Offers"/>
+        android:text="Offers"
+        android:onClick="offers"/>
 </LinearLayout>
